# mlmorph

.github/workflows/: ci.yml
docs/: package.json
docs/components/: Analyser.vue  Generator.vue  Ner.vue  Number.vue
docs/components/editor/: SpellcheckerExtension.js
python/: Makefile  pyproject.toml  tox.ini
python/mlmorph/: __init__.py  __main__.py  analyser.py  foreign_word_detector.py  generator.py  normalizer.py  utils.py
python/mlmorph/spellchecker/: spellchecker.py  utils.py
python/mlmorph/spellchecker/strategies/: __init__.py  chillu_normalization.py  chillu_to_virama_form.py  consonant_virama_to_chillu.py  geminate_consonants.py  insert_y_before_kkuka.py  mpa_correction.py  nta_correction.py  phonetic_similarity.py  suggestion_strategy.py  virama_insertion.py  visual_similarity.py  vowel_elongation.py  vowel_shortening.py
python/test/unit/: test_all_exports.py  test_mlmorph.py  test_module_integrity.py  test_type_correctness.py
python/test/unit/spellchecker/: test_spellchecker.py
scripts/: create-dataset.py
web/: mlmorphweb.py  requirements.txt
