[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mlmorph"
authors = [
    {name = "Santhosh Thottingal", email = "santhosh.thottingal@gmail.com"},
]
description = "Malayalam morphology analyser"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["Malayalam", "morphology", "FST", "analyser", "generator", "spellchecker"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]
dependencies = [
    "regex",
    "sfst>=1.6.0",
]
dynamic = ["version"]

[project.scripts]
mlmorph = "mlmorph.__main__:main"
spellchecker = "mlmorph.spellchecker.__main__:main"

[project.optional-dependencies]
tests = [
    "pytest",
]
dev = [
    "ruff>=0.6.4",
    "ty",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
search_parent_directories = true
git_describe_command = "git describe --tags --abbrev=0"

[tool.hatch.build.targets.wheel]
packages = ["mlmorph"]
artifacts = ["mlmorph/data/*.a"]

[tool.ruff]
line-length = 100
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
